Minor changes to Spring example to support support resource filtering
And other tweaks needed to pass Okta's public Runscope tests:
https://developer.okta.com/docs/guides/scim-provisioning-integration-test/main/

NOTE: These test should be turned into an integration suite as to NOT need any 3rd party tools to run them